# Crew-AI

./: README.md
crewtestflow/: README.md  poem.txt  pyproject.toml
crewtestflow/src/crewtestflow/: main.py
email_auto_responder_flow/: .gitignore  README.md  email_responses.md  pyproject.toml
email_auto_responder_flow/src/email_auto_responder_flow/: main.py
email_auto_responder_flow/src/email_auto_responder_flow/crews/email_filter_crew/: crew.py
email_auto_responder_flow/src/email_auto_responder_flow/crews/email_filter_crew/config/: agents.yaml  tasks.yaml
email_auto_responder_flow/src/email_auto_responder_flow/tools/: custom_tool.py
